--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">base_proj</string>
+    <string name="pick_image_intent_text">Choose image from</string>
+
 </resources>
